02 build_a_profile_site issue  height scrollbar sprout

--- a/projects/Build_a_profile_site/style.css
+++ b/projects/Build_a_profile_site/style.css
@@ -78,6 +78,7 @@ main{
   color: #7d97ad;
   font-size: 1.8em;
   margin-left: 0.2em;
+  margin-bottom: 0.2em;
 }
 
 .feature-works-list{
